--- a/listHwAddr/ChooseVictim/mainwindow.ui
+++ b/listHwAddr/ChooseVictim/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>509</width>
-    <height>648</height>
+    <height>693</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -80,7 +80,7 @@
     <property name="geometry">
      <rect>
       <x>-100</x>
-      <y>490</y>
+      <y>520</y>
       <width>761</width>
       <height>20</height>
      </rect>
@@ -95,7 +95,7 @@
       <x>20</x>
       <y>80</y>
       <width>471</width>
-      <height>411</height>
+      <height>441</height>
      </rect>
     </property>
     <property name="title">
@@ -194,11 +194,11 @@
       <string>Set</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="leDestMAC">
+    <widget class="QLineEdit" name="leRouterMAC">
      <property name="geometry">
       <rect>
-       <x>324</x>
-       <y>365</y>
+       <x>320</x>
+       <y>400</y>
        <width>141</width>
        <height>27</height>
       </rect>
@@ -220,21 +220,21 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>342</y>
-       <width>111</width>
+       <x>40</x>
+       <y>350</y>
+       <width>61</width>
        <height>17</height>
       </rect>
      </property>
      <property name="text">
-      <string>Source Victim :</string>
+      <string>Victim</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="leSourceMAC">
      <property name="geometry">
       <rect>
-       <x>14</x>
-       <y>365</y>
+       <x>50</x>
+       <y>400</y>
        <width>141</width>
        <height>27</height>
       </rect>
@@ -243,33 +243,94 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>300</x>
-       <y>343</y>
-       <width>191</width>
+       <x>320</x>
+       <y>350</y>
+       <width>151</width>
        <height>17</height>
       </rect>
      </property>
      <property name="text">
-      <string>Dest Victim (usually router):</string>
+      <string>Victim (usually router)</string>
      </property>
     </widget>
-    <zorder>btnScan</zorder>
-    <zorder>btnScan</zorder>
-    <zorder>label</zorder>
-    <zorder>twMain</zorder>
-    <zorder>spinBox</zorder>
-    <zorder>pbSetDest</zorder>
-    <zorder>leDestMAC</zorder>
-    <zorder>pbSetSource</zorder>
-    <zorder>label_2</zorder>
-    <zorder>leSourceMAC</zorder>
-    <zorder>label_3</zorder>
+    <widget class="QLineEdit" name="leSourceIP">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>370</y>
+       <width>141</width>
+       <height>27</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="leRouterIP">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>370</y>
+       <width>141</width>
+       <height>27</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>33</x>
+       <y>373</y>
+       <width>67</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>ip</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>17</x>
+       <y>403</y>
+       <width>67</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mac</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>289</x>
+       <y>404</y>
+       <width>67</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mac</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>305</x>
+       <y>374</y>
+       <width>67</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>ip</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>500</y>
+      <y>540</y>
       <width>461</width>
       <height>80</height>
      </rect>
