--- a/HoneyPipe/netsoul.ui
+++ b/HoneyPipe/netsoul.ui
@@ -14,17 +14,14 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPlainTextEdit" name="pte">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>240</y>
-      <width>91</width>
-      <height>27</height>
+      <x>170</x>
+      <y>90</y>
+      <width>541</width>
+      <height>261</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
     </property>
    </widget>
   </widget>
@@ -34,7 +31,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>27</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
