--- a/HoneyPipe/netsoul.ui
+++ b/HoneyPipe/netsoul.ui
@@ -14,14 +14,50 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPlainTextEdit" name="pte">
+   <widget class="QPlainTextEdit" name="in">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>90</y>
+      <x>160</x>
+      <y>60</y>
       <width>541</width>
-      <height>261</height>
+      <height>171</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="out">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>330</y>
+      <width>541</width>
+      <height>171</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>300</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>OUT</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>40</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>IN</string>
     </property>
    </widget>
   </widget>
