--- a/trunk/HoneyPipe/netsoul.ui
+++ b/trunk/HoneyPipe/netsoul.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Netsoul</string>
   </property>
   <property name="documentMode">
    <bool>false</bool>
